# macanism

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app_streamlit.py  generate_database.py  pyproject.toml
examples/: cam1_example.py  cam2_example.py  crankslider.py  crunode_coupler.py  engine.py  fivebarlinkage.py  fourbarlinkage.py  gear_fourbarlinkage.py  my_project_animation.py  non_grashof.py  offset_crankslider.py  plot_at_instant.py  readme_cam_example.py  readme_fourbar_example.py  readme_gear_example.py  trace_circle.py
generated_paths/: motion_studies.db  motion_studies.json
output_db/CrankSlider_Simple/: variation_009411b129.json  variation_062a8eafd1.json  variation_0bb1a3b143.json  variation_1724344d41.json
output_db/FourBarLinkage_TypeA/: variation_03e166ac0e.json  variation_05b29fc18c.json  variation_0713383d6d.json  variation_079d4fb275.json  variation_206b0147c4.json  variation_220d2f8d5c.json  variation_30744ed44d.json  variation_4f9343d858.json  variation_530658da5b.json  variation_563676133a.json  variation_566ab7c33c.json  variation_5f8eb725db.json  variation_8beef95f34.json  variation_9548561446.json  variation_99b5bc5542.json  variation_ac1b1726f0.json  variation_ae63496fe3.json  variation_aff042a9ac.json  variation_b0a476e3ad.json  variation_b4d8de4775.json  variation_c0cb600781.json  variation_c2545b17e0.json  variation_c7b1d5cab3.json  variation_cb3a606d40.json  variation_d853c75d4a.json  variation_ddb76e536c.json  variation_e1062ad7f0.json  variation_e1dd6ba792.json  variation_e276540bb8.json  variation_e6eb99fc66.json  variation_fa6dd28987.json  variation_fb0ba11439.json
output_path_data/: fourbar_paths_FourBarLinkage_default_params.csv  fourbar_paths_FourBarLinkage_default_params.json  fourbar_paths_FourBarLinkage_default_params.npz
src/macanism/: __init__.py  appearance.json  common_elements.py  gears.py  linkages.py  macanism_engine.py  main.py  mechanism.py  mechanism_templates.py  path_generator.py  vectors.py
src/macanism/stagger/: __init__.py  anchor.py  bar.py  database.py  iterator.py  motionstudy.py  twobar.py
tests/: __init__.py  test_macanism_engine.py  test_vectors.py
tests/gears/: backlash.py  below_base.py  internal_gear.py  internal_vs_external.py
tests/mechanism/: engine_test.py  non-grashof_test.py
