[project]
name = "macanism"
version = "0.1.0"
description = "A mechanism design and analysis tool."
authors = [
    {name = "Alan Synn", email = "alan@alansynn.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0", # Updated to Pydantic v2
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "streamlit>=1.0", # Assuming streamlit is used, add as dependency
    "streamlit-drawable-canvas>=0.9.0", # For path drawing
    "scikit-learn>=0.24", # For PCA
    "Pillow>=9.0", # Added Pillow for image handling
]
license = {text = "MIT"} # Or any other license

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    # flake8, mypy, black, isort etc.
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",      # A clean, modern Sphinx theme
    "sphinx-autoapi>=3.0.0", # For advanced API doc generation
    "myst-parser>=2.0.0",  # To allow Markdown files in Sphinx
    # napoleon is usually bundled with sphinx.ext.napoleon
]

[project.scripts]
# macanism-cli = "macanism.cli:main" # Example if a CLI is added

[build-system]
requires = ["hatchling"] # A common build backend, uv can use it
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/macanism/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=macanism --cov=tests"
no-cov = "cov --no-cov"

[tool.coverage.run]
source = ["macanism"]
omit = [
    "src/macanism/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
